syntax = "proto3";
//protoc --proto_path= --go_out=stackexchange/redis/. stackexchange/redis/protos/*.proto
option go_package = "/protos";

message ServerMessage {
  string eventName = 1;

  string from = 2;
  repeated string  to = 3;
  bytes body = 4;

  string token = 5;//for askServer
  bool toClient = 6;//for write Client
}

message ReplyMessage {
  oneof data {
    bytes body = 1;
    uint32 errorCode =2;
  }
}